{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 689,
  "lineage": "659eec24-f3f1-2d7a-0c38-4023afdae0b0",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "endpoint-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2204-jammy-v20230907",
                    "labels": {
                      "instace": "1"
                    },
                    "size": 30,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/zones/asia-south1-a/disks/endpoint-instance-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-practice-392512/zones/asia-south1-a/instances/endpoint-instance-1",
            "instance_id": "7142360724670376920",
            "label_fingerprint": "t4Kql2bj3e4=",
            "labels": {
              "env": "endpoint-instance",
              "instance": "1",
              "owner": "terraform"
            },
            "machine_type": "e2-micro",
            "metadata_fingerprint": "FYAqEuwreps=",
            "name": "endpoint-instance-1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/networks/vpc-test",
                "network_ip": "10.1.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/regions/asia-south1/subnetworks/private-subnet-1",
                "subnetwork_project": "terraform-practice-392512"
              }
            ],
            "project": "terraform-practice-392512",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/zones/asia-south1-a/instances/endpoint-instance-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "endpoint-instance"
            ],
            "tags_fingerprint": "tQAz7V3Zu94=",
            "zone": "asia-south1-a"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.private-subnets",
            "module.vpc.google_compute_subnetwork.public-subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "endpoint-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2204-jammy-v20230907",
                    "labels": {
                      "instace": "1"
                    },
                    "size": 30,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/zones/asia-south1-a/disks/endpoint-instance-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-practice-392512/zones/asia-south1-a/instances/endpoint-instance-2",
            "instance_id": "1791329299218688984",
            "label_fingerprint": "t4Kql2bj3e4=",
            "labels": {
              "env": "endpoint-instance",
              "instance": "1",
              "owner": "terraform"
            },
            "machine_type": "e2-micro",
            "metadata_fingerprint": "FYAqEuwreps=",
            "name": "endpoint-instance-2",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/networks/vpc-test",
                "network_ip": "10.1.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/regions/asia-south1/subnetworks/private-subnet-1",
                "subnetwork_project": "terraform-practice-392512"
              }
            ],
            "project": "terraform-practice-392512",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/zones/asia-south1-a/instances/endpoint-instance-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "endpoint-instance"
            ],
            "tags_fingerprint": "tQAz7V3Zu94=",
            "zone": "asia-south1-a"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.private-subnets",
            "module.vpc.google_compute_subnetwork.public-subnets"
          ]
        }
      ]
    },
    {
      "module": "module.cloud-nat",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "pvt-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-12T05:10:30.287-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/terraform-practice-392512/regions/asia-south1/routers/pvt-router-test",
            "name": "pvt-router-test",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/networks/vpc-test",
            "project": "terraform-practice-392512",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/regions/asia-south1/routers/pvt-router-test"
          },
          "dependencies": [
            "module.vpc.google_compute_firewall.allow-ssh",
            "module.vpc.google_compute_firewall.allow-tcp-pub",
            "module.vpc.google_compute_firewall.default",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.private-subnets",
            "module.vpc.google_compute_subnetwork.public-subnets"
          ]
        }
      ]
    },
    {
      "module": "module.cloud-nat",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "pvt-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "terraform-practice-392512/asia-south1/pvt-router-test/pvt-nat-test",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "pvt-nat-test",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "terraform-practice-392512",
            "region": "asia-south1",
            "router": "pvt-router-test",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.cloud-nat.google_compute_router.pvt-router",
            "module.vpc.google_compute_firewall.allow-ssh",
            "module.vpc.google_compute_firewall.allow-tcp-pub",
            "module.vpc.google_compute_firewall.default",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.private-subnets",
            "module.vpc.google_compute_subnetwork.public-subnets"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "RATE",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/zones/asia-south1-a/networkEndpointGroups/test-my-lb-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 100,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-09-12T05:10:58.827-07:00",
            "enable_cdn": true,
            "fingerprint": "Fyk6dcgWcUU=",
            "generated_id": 2904494666683378621,
            "health_checks": [
              "projects/terraform-practice-392512/global/healthChecks/lb-hc"
            ],
            "id": "projects/terraform-practice-392512/global/backendServices/lb-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "lb-backend-service",
            "port_name": "http",
            "project": "terraform-practice-392512",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/backendServices/lb-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "module.NEG.google_compute_network_endpoint_group.neg",
            "module.loadbalancer.google_compute_health_check.default",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.private-subnets",
            "module.vpc.google_compute_subnetwork.public-subnets"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.110.178.176",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-09-12T05:10:42.097-07:00",
            "id": "projects/terraform-practice-392512/global/addresses/lb-static-ip",
            "name": "lb-static-ip",
            "prefix_length": 0,
            "project": "terraform-practice-392512",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/addresses/lb-static-ip"
          },
          "dependencies": [
            "module.NEG.google_compute_network_endpoint_group.neg",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.private-subnets",
            "module.vpc.google_compute_subnetwork.public-subnets"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/terraform-practice-392512/global/forwardingRules/lb-forwarding-rule",
            "ip_address": "projects/terraform-practice-392512/global/addresses/lb-static-ip",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "lb-forwarding-rule",
            "port_range": "80",
            "project": "terraform-practice-392512",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/forwardingRules/lb-forwarding-rule",
            "target": "projects/terraform-practice-392512/global/targetHttpProxies/lb-target-http-proxy"
          },
          "dependencies": [
            "module.NEG.google_compute_network_endpoint_group.neg",
            "module.loadbalancer.google_compute_backend_service.default",
            "module.loadbalancer.google_compute_global_address.default",
            "module.loadbalancer.google_compute_health_check.default",
            "module.loadbalancer.google_compute_target_http_proxy.default",
            "module.loadbalancer.google_compute_url_map.default",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.private-subnets",
            "module.vpc.google_compute_subnetwork.public-subnets"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-12T05:11:45.199-07:00",
            "id": "projects/terraform-practice-392512/global/targetHttpProxies/lb-target-http-proxy",
            "name": "lb-target-http-proxy",
            "project": "terraform-practice-392512",
            "proxy_bind": false,
            "proxy_id": 8265270337842572142,
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/targetHttpProxies/lb-target-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/urlMaps/lb-url-map"
          },
          "dependencies": [
            "module.NEG.google_compute_network_endpoint_group.neg",
            "module.loadbalancer.google_compute_backend_service.default",
            "module.loadbalancer.google_compute_health_check.default",
            "module.loadbalancer.google_compute_url_map.default",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.private-subnets",
            "module.vpc.google_compute_subnetwork.public-subnets"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-12T05:11:32.622-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/backendServices/lb-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "epFy7kLniq0=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/terraform-practice-392512/global/urlMaps/lb-url-map",
            "map_id": 8780817561851653019,
            "name": "lb-url-map",
            "path_matcher": [],
            "project": "terraform-practice-392512",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/urlMaps/lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.NEG.google_compute_network_endpoint_group.neg",
            "module.loadbalancer.google_compute_backend_service.default",
            "module.loadbalancer.google_compute_health_check.default",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.private-subnets",
            "module.vpc.google_compute_subnetwork.public-subnets"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-12T05:09:52.695-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-practice-392512/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/networks/vpc-test",
            "priority": 1000,
            "project": "terraform-practice-392512",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tcp-pub",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-12T05:09:52.683-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-practice-392512/global/firewalls/allow-tcp-pub",
            "log_config": [],
            "name": "allow-tcp-pub",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/networks/vpc-test",
            "priority": 1000,
            "project": "terraform-practice-392512",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/firewalls/allow-tcp-pub",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "pub"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-12T05:09:52.598-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-practice-392512/global/firewalls/l7-xlb-fw-allow-hc",
            "log_config": [],
            "name": "l7-xlb-fw-allow-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/networks/vpc-test",
            "priority": 1000,
            "project": "terraform-practice-392512",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/firewalls/l7-xlb-fw-allow-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-health-check"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-practice-392512/global/networks/vpc-test",
            "mtu": 1460,
            "name": "vpc-test",
            "project": "terraform-practice-392512",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/networks/vpc-test"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private-subnets",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-12T05:09:55.486-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/terraform-practice-392512/regions/asia-south1/subnetworks/private-subnet-1",
            "ip_cidr_range": "10.1.0.0/28",
            "name": "private-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/networks/vpc-test",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-practice-392512",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/regions/asia-south1/subnetworks/private-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-12T05:09:56.290-07:00",
            "gateway_address": "10.1.0.17",
            "id": "projects/terraform-practice-392512/regions/asia-south1/subnetworks/private-subnet-2",
            "ip_cidr_range": "10.1.0.16/28",
            "name": "private-subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/networks/vpc-test",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-practice-392512",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/regions/asia-south1/subnetworks/private-subnet-2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public-subnets",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-12T05:09:53.850-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/terraform-practice-392512/regions/us-central1/subnetworks/pub-subnet-1",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "pub-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/networks/vpc-test",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-practice-392512",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/regions/us-central1/subnetworks/pub-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-12T05:09:52.756-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/terraform-practice-392512/regions/us-central1/subnetworks/pub-subnet-2",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "pub-subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/global/networks/vpc-test",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-practice-392512",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-392512/regions/us-central1/subnetworks/pub-subnet-2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}